# actix-todo

./: .gitignore  README.md
actix-todo/: .env  Cargo.toml  Makefile  database.sql  docker-compose.yml
actix-todo/src/: db.rs  errors.rs  handlers.rs  main.rs  models.rs
my-actix-todo/: .env  Cargo.toml
my-actix-todo/src/: config.rs  db.rs  errors.rs  form.rs  handlers.rs  main.rs  models.rs
